<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">公共组件</string>

    <string name="title_section_share">分享模块</string>
    <string name="title_section_media">媒体播放模块</string>
    <string name="title_section_download">下载模块</string>
    <string name="title_section_database">数据库模块</string>
    <string name="title_section_plugin">插件模块</string>
    <string name="title_section_animator">动画模块</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_bind">绑定</string>
    <string name="action_unbind">解绑</string>
    <!-- 分享模块 -->

    <string name="app_weiblog">微博客户端</string>
    <string name="app_qq">QQ客户端</string>
    <string name="app_weichat">微信客户端</string>

    <string name="action_weiblog">微博</string>
    <string name="action_weichat">微信</string>
    <string name="action_weichat_friends">微信朋友圈</string>
    <string name="action_qq">QQ</string>
    <string name="action_qqzone">QQ空间</string>
    <string name="action_qqfriends">QQ好友</string>
    <string name="action_qqweibo">QQ微博</string>
    <string name="action_settings">设置</string>

    <string name="share_status_cancel">分享被取消</string>
    <string name="share_status_success">分享成功</string>
    <string name="share_status_fail">分享失败</string>
    <string name="share_status_auth_success">授权成功</string>
    <string name="share_status_cancel_download_weibo">取消下载微博</string>
    <string name="share_errcode_unknown">分享出现未知错误</string>
    <string name="share_status_auth_deny">授权失败</string>
    <string name="share_status_cancel_auth">授权过程被取消</string>
    <string name="share_errcode_uninstalled">未安装%1$s软件不能进行分享</string>
    <string name="share_errcode_unsupport">分享不支持</string>
    <string name="share_errcode_auth_cancel">授权过程被取消</string>
    <string name="share_errcode_auth_fail_code">获得CODE失败</string>
    <string name="share_errcode_login_fail">登录失败</string>
    <string name="share_errcode_login_cancel">登录过程取消</string>
    <string name="share_errcode_net_timeout">网络连接超时</string>
    <string name="share_errcode_need_update">您安装的%1$s需要进行升级</string>
    <string name="share_errcode_auth_timeout">授权有效期失效</string>
    <string name="share_errcode_api_unsupport">该API需要申请权限</string>
    <string name="share_text_empty">文本内容为空</string>
    <string name="share_music_invalidate_url">音频试听链接为空</string>
    <string name="share_video_invalidate_url">视频播放链接为空</string>
    <string name="share_image_empty">图片数据为空</string>
    <string name="share_webpage_invalidate_url">网址为空或者无效</string>
    <string name="share_invalidate_datas">分享数据无效</string>
    <string name="share_text_too_long">文本长度太长</string>
    <string name="share_music_invalidate_redirect_url">跳转详情url为空或者无效</string>
    <string name="share_music_invalidate_duration">播放时长为0或者无效</string>
    <string name="share_music_title_empty">歌曲名或者描述为空</string>
    <string name="share_video_title_empty">视频名或者描述为空</string>
    <string name="share_video_invalidate_duration">视频时长无效</string>
    <string name="share_video_invalidate_redirect_url">视频跳转url无效</string>
    <string name="share_image_title_empty">图片标题为空</string>
    <string name="share_image_desc_empty">图片描述为空</string>
    <string name="share_image_invalid_detail_url">图片跳转url无效</string>
    <string name="share_text_title_empty">文本标题为空</string>
    <string name="share_invalidate_redirect_url">无效跳转url</string>
    <string name="share_image_only_for_local">只支持本地图片</string>
    <string name="share_image_invalid_url">无效的网络图片链接</string>

    <string name="share_default_redirect_url">http://music.baidu.com/</string>
    <string name="share_recognition_redirect_url">http://music.baidu.com/song/%1$s</string>
    <string name="share_topic_redirect_url">http://music.baidu.com/topic/special/%1$s</string>
    <string name="share_song_redirect_url">http://music.baidu.com/song/%1$s?share=1&amp;fr=app_android</string>
    <string name="share_songlist_redirect_url">http://music.baidu.com/songlist/%1$s</string>

    <string name="share_template_message_songlist">刚刚在百度音乐听到一个非常棒的歌单《%2$s》,你也来试试吧。@百度音乐 安卓客户端</string>
    <string name="share_template_message_recognition">我刚刚在百度音乐手机版听歌识曲找到了%1$s的歌曲《%2$s》，再也不用担心不知道歌名啦,快来试试吧！</string>
    <string name="share_template_message_song">推荐一首好歌：%1$s《%2$s》，来自@百度音乐 安卓客户端。点击去收听吧：%3$s</string>
    <string name="share_errcode_sdcard_badly">当前存储卡状态出错，不能进行含有图片的分享</string>
    <string name="share_errcode_sdcard_no_space">当前存储卡空间不足，不能进行含有图片的分享</string>
    <string name="online_network_connect_error">网络不可用</string>


</resources>
